--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="Arvind-Singh-Baghel" content="Arvind-Singh-Baghel, Arvind Singh Baghel">
     <meta name="description" content="Arvind Singh Baghel">
     <meta name="keywords" content="Arvind-Singh-Baghel, Arvind Singh Baghel, software developer, MVC, Angular" >
-    <meta name="theme-color" content="#B12A34"/>
+    <meta name="theme-color" content="#0fabbf"/>
     
     <title>Arvind</title>
     
