--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <link href="style.css" rel="stylesheet">
     <script type="text/javascript" src="index.js" ></script>
     <link rel="manifest" href="manifest.webmanifest">
-    <script type="text/javascript" src="sw.js" ></script>
   </head>
   <body>
     <h1>Welcome Arvind</h1>
     <p>
-      Make something <strong>amazing</strong> with the web!
+      Make something <strong>amazing</strong> with the web.
     </p>
     <button type="button" text="Submit" id="btnAdd"> Submit</button>
   </body>
