--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Arvind</title>
     
     <link rel="icon" type="image/x-icon" href="icon-512.png"> 
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link rel="manifest" href="manifest.webmanifest">
     <script type="text/javascript" src="index.js" ></script>
   </head>
