--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="Images/MyImageNew.jpg" style="width:100%" height="40%" alt="Arvind singh baghel">
+          <img src="Images/MyImageNewWhite.jpg" style="width:100%" height="40%" alt="Arvind singh baghel">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h1>Arvind Singh Baghel</h1>
           </div>
