--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <title>Arvind</title>
     
-    <link rel="icon" type="image/x-icon" href="icon-512.png"> 
+    <link rel="icon" type="image/x-icon" href="Images/Icon512.png"> 
     <link href="css/style.css" rel="stylesheet">
     <link rel="manifest" href="manifest.webmanifest">
     <script type="text/javascript" src="index.js" ></script>
